Added Findbugs to the build cycle